enhancement(ontorefine): updated tour-booking config to include status

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
             data=""
             while true; do
               echo "Fetching ${file_name} with offset $offset"
-              response=$(curl -s "https://arts-tc.ca/api/$source?page%5Boffset%5D=$offset" --header "Authorization: basic ${{secrets.API_KEY}}")
+              response=$(curl -s "https://test-block-booking.pantheonsite.io/api/$source?page%5Boffset%5D=$offset" --header "Authorization: basic ${{secrets.API_KEY}}")
               # Checking if data is empty
               if [ "$(echo $response | jq '.data | length')" -eq 0 ]; then 
                 echo "No more data for $source"
