fix: added needs in yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: fetch atc entities
         run: |
-          bundle exec ruby scripts/fetch_atc_entities.rb --token=${{ secrets.API_KEY }}
+          bundle exec ruby src/fetch_atc_entities.rb --token=${{ secrets.API_KEY }}
 
       - name: upload artifact
         uses: actions/upload-artifact@v5
@@ -29,6 +29,7 @@ jobs:
           path: json/
 
   process-using-ontorefine:
+    needs: fetch-atc-entities
     runs-on: ubuntu-latest
     container:
       image: ontotext/refine:1.2.1
@@ -49,6 +50,7 @@ jobs:
         run: /opt/ontorefine/dist/bin/ontorefine &
 
       - name: Transform entities with OntoRefine
+        shell: bash
         run: |
           mkdir -p outputs
           
